# Django_homework3

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
