[project]
name = "django-homework3"
version = "0.1.0"
description = ""
authors = [
    {name = "Denys",email = "nikeenko89@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
